objects/Account_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Account_Profile_Setting__c</fullName>
        <label>Account Profile Setting</label>
        <referenceTo>Account_Profile_Setting__c</referenceTo>
        <relationshipLabel>Account Profiles</relationshipLabel>
        <relationshipName>Account_Profiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Profile</label>
        <referenceTo>Account_Profile__c</referenceTo>
        <relationshipLabel>Account Profiles</relationshipLabel>
        <relationshipName>Account_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Access__c</fullName>
        <inlineHelpText>Custom object help text222222</inlineHelpText>
        <label>Profile Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAT__c</fullName>
        <label>TAT</label>
        <type>Date</type>
    </fields>
    <label>Account Profile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Profiles</pluralLabel>
    <recordTypes>
        <fullName>AP1</fullName>
        <active>true</active>
        <label>AP1</label>
    </recordTypes>
    <recordTypes>
        <fullName>AP2</fullName>
        <active>true</active>
        <label>AP2</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TAT_validation</fullName>
        <active>true</active>
        <errorConditionFormula>TAT__c &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>TAT__c</errorDisplayField>
        <errorMessage>TAT cannot be past date</errorMessage>
    </validationRules>
</CustomObject>